--- a/config/example.config.yaml
+++ b/config/example.config.yaml
@@ -1,5 +1,8 @@
 apiVersion: v1
 kind: Config
+
+current-context: my-kube-admin
+
 clusters:
   - name: my-kube-playground
     cluster:
@@ -11,6 +14,7 @@ contexts:
     context:
       cluster: my-kube-playground
       user: my-kube-admin
+      namespace: default-namespace-forthiscontext
 
 users:
   - name: my-kube-admin
