--- a/gameofpods/bravo/drupal-mysql.deployment.yaml
+++ b/gameofpods/bravo/drupal-mysql.deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: drupal-mysql
   labels:
-    app: mysql
+    app: drupal-mysql
 spec:
   replicas: 1
   selector:
@@ -40,6 +40,6 @@ spec:
                   name: drupal-mysql-secret
                   key: MYSQL_USER
           volumeMounts:
-            - mountPath: /var/lib/msyql
+            - mountPath: /var/lib/mysql
               name: mysql-pvc
               subPath: dbdata
