--- a/gameofpods/bravo/service-mysql-drupal.yaml
+++ b/gameofpods/bravo/service-mysql-drupal.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: drupal-service
+  name: drupal-mysql-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
-    app: drupal
+    app: drupal-mysql
   ports:
     - protocol: TCP
       port: 3306
-      nodePort: 30095
+      name: drupal-mysql
